--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,39 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <profiles>
+
+        <profile>
+            <id>windows</id>
+            <activation>
+                <property>
+                    <name>platform</name>
+                    <value>win</value>
+                </property>
+            </activation>
+            <properties>
+                <os_name>win32</os_name>
+                <lib_name>jnilibrary.dll</lib_name>
+            </properties>
+
+        </profile>
+
+        <profile>
+            <id>Linux</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>platform</name>
+                    <value>nix</value>
+                </property>
+            </activation>
+            <properties>
+                <os_name>linux</os_name>
+                <lib_name>libjnilibrary.so</lib_name>
+            </properties>
+        </profile>
+
+    </profiles>
 
     <build>
         <plugins>
@@ -41,6 +74,96 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <version>1.0-alpha-8</version>
+                <extensions>true</extensions>
+                <configuration>
+
+                    <!--
+                    <javahOS>linux</javahOS>
+                    <javahOS>win32</javahOS>
+                    -->
+
+                    <javahOS>${os_name}</javahOS>
+
+                    <!--
+                    <This is dealt in generate-header script>
+                    <javahOutputDirectory>${project.basedir}/native/include</javahOutputDirectory>
+                    <javahClassNames>
+                        <javahClassName>com.example.NativeApplication</javahClassName>
+                    </javahClassNames>
+                    -->
+
+                    <sources>
+                        <source>
+                            <directory>src/main/native</directory>
+                            <fileNames>
+                                <fileName>jni.c</fileName>
+                            </fileNames>
+                        </source>
+                        <source>
+                            <directory>src/main/native/include</directory>
+                        </source>
+                    </sources>
+                    <compilerProvider>generic-classic</compilerProvider>
+                    <compilerExecutable>gcc</compilerExecutable>
+
+                    <compilerStartOptions>
+                        <compilerStartOption>-m64</compilerStartOption>
+                        <compilerStartOption>-fpic</compilerStartOption>
+                        <compilerStartOption>-Wall</compilerStartOption>
+                        <compilerStartOption>-Wextra</compilerStartOption>
+                        <compilerStartOption>-ansi</compilerStartOption>
+                        <compilerStartOption>-g</compilerStartOption>
+                        <compilerStartOption>-O3</compilerStartOption>
+                    </compilerStartOptions>
+
+                    <linkerOutputDirectory>target</linkerOutputDirectory>
+                    <linkerExecutable>gcc</linkerExecutable>
+
+                    <linkerStartOptions>
+                        <linkerStartOption>-m64</linkerStartOption>
+                        <linkerStartOption>-shared</linkerStartOption>
+                    </linkerStartOptions>
+
+                    <linkerFinalName></linkerFinalName>
+
+                    <linkerEndOptions>
+                        <linkerEndOption>-o ${project.build.directory}/${lib_name}</linkerEndOption>
+                    </linkerEndOptions>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>javah</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>initialize</goal>
+                            <goal>compile</goal>
+                            <goal>link</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+            </plugin>
+
         </plugins>
     </build>
 
